extended cropzone menu

--- a/apps/image-editor/src/css/range.styl
+++ b/apps/image-editor/src/css/range.styl
@@ -76,6 +76,12 @@
         font-family: 'Noto Sans', sans-serif;
         margin-top: 15px;
         margin-left: 4px;
+    .{prefix}-cropzone-ranges
+      margin-bottom: 5px
+
+      .{prefix}-range-value
+        margin-top: 0;
+        margin-left: 0;
     .{prefix}-controls
         position: absolute;
         background-color: #151515;
